# API-Test-Automation-Wireframe

./: .env.example  .gitignore  Dockerfile  JOURNEY.md  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
.github/workflows/: api-tests.yml
clients/: auth_client.py  base_client.py  resources_client.py  users_client.py
config/: settings.py
docs/: API_ARCHITECTURE.md  PROJECT_SUMMARY.md
models/: schemas.py
tests/auth/: test_auth_api.py
tests/negative/: test_negative_scenarios.py
tests/resources/: test_resources_api.py
tests/users/: test_users_api.py
tests/workflows/: test_e2e_workflows.py
utils/: logger.py  test_data.py
