[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "api-test-automation-framework"
version = "1.0.0"
description = "Enterprise-grade REST API test automation framework"
authors = [{name = "Jason Teixeira"}]
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0.0",
    "requests>=2.31.0",
    "pydantic>=2.5.3",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--disable-warnings",
    "-p", "no:cacheprovider",
    "--html=reports/html/report.html",
    "--self-contained-html",
    "--alluredir=reports/allure-results",
]
markers = [
    "smoke: Critical path API tests",
    "regression: Full regression test suite",
    "users: User API endpoint tests",
    "resources: Resource API endpoint tests", 
    "auth: Authentication and authorization tests",
    "workflows: End-to-end workflow tests",
    "negative: Negative test scenarios",
    "security: Security-focused tests",
    "performance: Performance and load tests",
    "schema: Schema validation tests",
    "slow: Tests that take longer to execute",
]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.coverage.run]
source = ["clients", "models", "utils", "config"]
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "reports/coverage"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["clients", "models", "utils", "config"]

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
]
max-line-length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
